--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,20 @@
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.core_version = '1.2.0'
+    ext.app_compat_version = '1.1.0'
+    ext.constraint_layout_version = '1.1.3'
+    ext.lifecycle_version = '2.2.0'
+    ext.retrofit_version = '2.4.0'
+    ext.junit_version = '4.13'
+    ext.koin_version = '2.1.5'
+
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath "com.android.tools.build:gradle:3.6.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -15,7 +23,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
