--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,12 @@ buildscript {
     ext.app_compat_version = '1.1.0'
     ext.constraint_layout_version = '1.1.3'
     ext.lifecycle_version = '2.2.0'
+    ext.navigation_version = '2.2.2'
     ext.retrofit_version = '2.4.0'
     ext.junit_version = '4.13'
+    ext.coroutines_version = '1.3.7'
     ext.koin_version = '2.1.5'
+    ext.glide_version = '4.11.0'
 
     repositories {
         google()
@@ -16,6 +19,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:3.6.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
     }
 }
 
