--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
     ext.coroutines_version = '1.3.7'
     ext.koin_version = '2.1.5'
     ext.glide_version = '4.11.0'
+    ext.retrofit_version = '2.9.0'
+    ext.logging_interceptor_version = '4.7.2'
 
     repositories {
         google()
