--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
+    implementation "io.mockk:mockk:$mockk_version"
+    implementation "io.mockk:mockk-android:$mockk_version"
+
     testImplementation "junit:junit:$junit_version"
 }
