--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     ext.glide_version = '4.11.0'
     ext.retrofit_version = '2.9.0'
     ext.logging_interceptor_version = '4.7.2'
+    ext.mockk_version = '1.9'
 
     repositories {
         google()
