--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.anaumchik.weather"
+        applicationId "com.anaumchik.weather.app"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
