--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'androidx.navigation.safeargs.kotlin'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.anaumchik.weather.app"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "0.0.1"
 
@@ -30,6 +30,23 @@ android {
     }
     testOptions {
         animationsDisabled = true
+    }
+    configurations {
+        ktlint
+    }
+    task ktlint(type: JavaExec, group: "verification") {
+        description = "Check Kotlin code style."
+        main = "com.pinterest.ktlint.Main"
+        classpath = configurations.ktlint
+        args "src/**/*.kt"
+    }
+    check.dependsOn ktlint
+
+    task ktlintFormat(type: JavaExec, group: "formatting") {
+        description = "Fix Kotlin code style deviations."
+        main = "com.pinterest.ktlint.Main"
+        classpath = configurations.ktlint
+        args "-F", "src/**/*.kt"
     }
 }
 
@@ -65,4 +82,6 @@ dependencies {
     implementation "io.mockk:mockk-android:$mockk_version"
 
     testImplementation "junit:junit:$junit_version"
+
+    ktlint "com.pinterest:ktlint:0.37.2"
 }
