--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,13 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
 apply plugin: 'kotlin-kapt'
 
+apply from: '../ktlint.gradle'
+
 android {
     compileSdkVersion 30
     defaultConfig {
         applicationId "com.anaumchik.weather.app"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "0.0.1"
@@ -31,23 +33,7 @@ android {
     testOptions {
         animationsDisabled = true
     }
-    configurations {
-        ktlint
-    }
-    task ktlint(type: JavaExec, group: "verification") {
-        description = "Check Kotlin code style."
-        main = "com.pinterest.ktlint.Main"
-        classpath = configurations.ktlint
-        args "src/**/*.kt"
-    }
     check.dependsOn ktlint
-
-    task ktlintFormat(type: JavaExec, group: "formatting") {
-        description = "Fix Kotlin code style deviations."
-        main = "com.pinterest.ktlint.Main"
-        classpath = configurations.ktlint
-        args "-F", "src/**/*.kt"
-    }
 }
 
 dependencies {
@@ -82,6 +68,4 @@ dependencies {
     implementation "io.mockk:mockk-android:$mockk_version"
 
     testImplementation "junit:junit:$junit_version"
-
-    ktlint "com.pinterest:ktlint:0.37.2"
 }
